--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "http://localhost:5000/"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,11 @@
     "@headlessui/react": "^2.2.4",
     "@types/node": "^22.13.11",
     "@vitejs/plugin-react": "^4.7.0",
+    "axios": "^1.11.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "vite": "^6.3.5"
   },
   "devDependencies": {
